--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,9 @@ jobs:
       with:
         python-version: '3.10'
     - name: Install dependencies
-      run: pip install concrete-compiler
+      run: |
+        python -m pip install --upgrade pip
+        pip install concrete-compiler tkinter
     - name: Run demo test
       run: python fhe_game_demo.py single  # Simulated run (non-interactive)
     - name: Lint code
