--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,11 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y python3-tk
-        sudo apt-get install -y libomp-dev  # Thêm dependency native cho concrete
+        sudo apt-get install -y libomp-dev  # Native dependency for concrete
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install concrete-compiler
+        pip install concrete-python concrete-compiler
     - name: Run demo test
       run: python fhe_game_demo.py single  # Simulated run (non-interactive)
     - name: Lint code
