--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # Sử dụng 3.10 để tương thích với concrete
+        python-version: '3.10'
     - name: Install system dependencies
       run: |
         sudo apt-get update
@@ -18,8 +18,8 @@ jobs:
         sudo apt-get install -y libomp-dev
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install concrete-python concrete-compiler
+        python -m pip install --upgrade pip wheel setuptools
+        pip install concrete-python --index-url https://pypi.zama.ai/simple
     - name: Run demo test
       run: python fhe_game_demo.py single  # Simulated run
     - name: Lint code
