--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,1 +1,18 @@
-
+{
+  "name": "Zama FHE Game Demo",
+  "image": "mcr.microsoft.com/vscode/devcontainers/python:3.10",
+  "features": {
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.10"
+    }
+  },
+  "postCreateCommand": "pip install -U pip wheel setuptools && pip install concrete-python --index-url https://pypi.zama.ai/simple",
+  "forwardPorts": [12345],
+  "customizations": {
+    "vscode": {
+      "extensions": ["ms-python.python", "ms-toolsai.jupyter"]
+    }
+  },
+  "runArgs": ["--init"],
+  "remoteUser": "vscode"
+}
